# GAP2.0

./: .gitignore  CLUSTER_READINESS.md  Claude.md  README.md  discussion.md  pyproject.toml  requirements.txt
configs/: default.yaml  llava_7b.yaml  qwen_vl.yaml  qwen_vl_full.yaml  qwen_vl_smoke.yaml  smoke_test.yaml
docs/: gap21_next_steps_plan.md  meeting_snapshot_2026_02_18.md  phase1_analysis_opus.md  progress_review_2026_02_18.md
results/attention_flow/: phase2_attention_flow_results.json
results/full_test/: checkpoint_report.txt  phase1_causal_results.json  phase1_geometry_results.json  phase1_truncation_results.json
results/model_accuracy_chartqa_orig_vs_random/: phase2_model_accuracy_results.json
results/model_accuracy_chartqa_orig_vs_random_large/: phase2_model_accuracy_results.json
results/text_probing_chartqa/: phase2_probe_delta_orig_vs_random_bootstrap.json  phase2_text_probing_results.json
results/text_probing_chartqa_blind/: phase2_text_probing_results.json
results/text_probing_chartqa_blind_mean/: phase2_text_probing_results.json
results/text_probing_chartqa_blind_random/: phase2_text_probing_results.json
scripts/: analyze_phase2_probe_delta.py  run_attention_sparsity.py  run_checkpoint_eval.py  run_deep_layer_masking.py  run_phase1_causal.py  run_phase1_geometry.py  run_phase1_truncation.py  run_phase2_attention_flow.py  run_phase2_model_accuracy.py  run_phase2_text_probing.py  run_soft_truncation.py
scripts/slurm/: run_gap2_attention_flow.slurm  run_gap2_attention_sparsity.slurm  run_gap2_deep_layer_masking.slurm  (+9 more)
src/: __init__.py
(+20 files in other folders)
