[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "gap2"
version = "0.1.0"
description = "GAP 2.0: Geometric Alignment for Preventing Information Collapse in MLLMs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
